added README and animation

--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
                         stunning but
                         also provide seamless functionality</p>
                 </div>
+                <div class="skills">
+                    <h6>Skills</h6>
+                    <ul>
+                        <li class="uiux">UI / UX</li>
+                        <li class="FED">Front End Development</li>
+                        <li class="html">HTML</li>
+                        <li class="css">CSS</li>
+                        <li class="js">JavaScript</li>
+                        <li class="react">React</li>
+                        <li class="node">Node</li>
+                    </ul>
+                </div>
+
                 <button class="toggle-info">Show Less</button>
             </div>
         </div>
